<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="loading">Загрузка…</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помочь</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="birthday">Дата рождения</string>
    <string name="profession">Сфера деятельности</string>
    <string name="push">Получать push-уведомления</string>
    <string name="friends">Ваши друзья</string>
    <string name="exit_button">Выйти из аккаунта</string>
    <string name="profile_name">Фамилия Имя</string>
    <string name="choose_kind_of_help">Выберите категорию помощи</string>
    <string name="filter">Фильтр</string>
    <string name="write_us"><u>Напишите нам</u></string>
    <string name="go_to_company"><u>Перейти на сайт организации</u></string>
    <string name="help_with_things">Помочь\nвещами</string>
    <string name="become_volunteer">Стать\nволонтером</string>
    <string name="prof_help">Проф\nпомощь</string>
    <string name="help_with_money">Помочь\nденьгами</string>
    <string name="authorization">Авторизация</string>
    <string name="email">E-mail</string>
    <string name="input_email">Введите e-mail</string>
    <string name="input_password">Введите пароль</string>
    <string name="come_in">ВОЙТИ</string>
    <string name="forget_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="authorization_label">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="another_authorization_label">Или авторизуйтесь через приложение</string>
    <string name="like_count">+102</string>
    <string name="do_you_have_questions">У вас есть вопросы?</string>
    <string name="password">Пароль</string>
    <string name="key_word_label">Ключевые слова: мастер-класс, помощь Результаты поиска: 109 мероприятий</string>
    <string name="hint_no_results">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="for_example">Например,</string>
    <string name="master_class_help"><u>мастер-класс, помощь</u></string>
    <string name="help_categories">Категории помощи:</string>
    <string name="children">Дети</string>
    <string name="friend_name">Friend name</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="create_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="_100">100 ₽</string>
    <string name="_500">500 ₽</string>
    <string name="_1000">1000 ₽</string>
    <string name="_5000">5000 ₽</string>
    <string name="thanks">Спасибо за решение помочь</string>
    <string name="select_donation_amount">Выберите размер пожертвования</string>
    <string name="or_write_your_sum">или введите нужную сумму</string>
    <string name="write_sum">Введите сумму</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="dismiss">ПЕРЕВЕСТИ</string>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="what_thing_you_want_to_send">Напишите, какую вещь вы бы хотели передать</string>
    <string name="what_help_you_can_do">Напишите, какую проф. помощь вы можете оказать</string>
    <string name="write_phone">Введите номер телефона</string>
</resources>