<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news"
        android:icon="@drawable/list"
        android:title="@string/news"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="always" />
    <item
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:title="@string/history"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>