<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="26dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/thanks"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/select_donation_amount"
        android:textColor="@color/black54"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/oneHundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_radio_button"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/_100"
            android:textColor="@color/radio_money_selector" />

        <RadioButton
            android:id="@+id/fiveHundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_radio_button"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/_500"
            android:textColor="@color/radio_money_selector" />

        <RadioButton
            android:id="@+id/oneThousand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_radio_button"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/_1000"
            android:textColor="@color/radio_money_selector" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/or_write_your_sum"
        android:textColor="@color/black54"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/writeSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/write_sum"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textColor="@color/black38"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:text="@string/dismiss"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>